add: all funcions ,fix:services and app

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,7 +1,7 @@
 header {
   height: 100vh;
-  padding-top: 7rem;
-  overflow: hidder;
+  padding-top: 4rem;
+  overflow: hidden;
 }
 
 .header__container {
@@ -28,7 +28,7 @@ header {
   gap: 0.8rem;
   position: absolute;
   left: 0;
-  bottom: 3rem;
+  bottom: 8rem;
 }
 
 .header__socials::after {
@@ -40,16 +40,20 @@ header {
 /* ME */
 
 .me {
-  width: 22rem;
+  width: 21rem;
   height: 30rem;
   position: absolute;
   left: calc(50% - 11rem);
-  margin-top: 11rem;
-  border-radius: 12rem 12rem 0 0;
+  margin-top: 4rem;
+  border-radius: 0rem;
   overflow: hidden;
+  display: flex;
+  align-items: center;
 }
 .me img {
+  border-radius: 12rem;
   aspect-ratio: 1/1;
+  animation: movimento 3s linear infinite;
 }
 /* scroll down */
 .scroll__down {
@@ -59,6 +63,18 @@ header {
   transform: rotate(90deg);
   font-weight: 300;
   font-size: 0.9rem;
+}
+
+@keyframes movimento {
+  0% {
+    transform: translateY(-15px);
+  }
+  50% {
+    transform: translateY(15px);
+  }
+  100% {
+    transform: translateY(-15px);
+  }
 }
 
 /*MEDIA QUERIES MEDIUM*/
