--- a/src/components/About/style.css
+++ b/src/components/About/style.css
@@ -4,7 +4,7 @@
   gap: 15%;
 }
 .about__me {
-  width: 100%;
+  width: 90%;
   aspect-ratio: 1/1;
   border-radius: 2rem;
   background: linear-gradient(
@@ -15,6 +15,9 @@
   );
   display: grid;
   place-items: center;
+}
+.letsTalk {
+  margin-top: 1.5rem;
 }
 .about__me-image {
   border-radius: 2rem;
@@ -33,6 +36,7 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 1.5rem;
+  margin-bottom: 1.5rem;
 }
 .about__cards {
   background: var(--color-bg-variant);
@@ -69,17 +73,20 @@
     gap: 0;
   }
   .about__me {
-    width: 50%;
+    width: 30%;
     margin: 2rem auto 4rem;
   }
   .about__content p {
     margin: 1rem 0 1.5rem;
   }
+  .letsTalk {
+    display: none;
+  }
 }
 /*MEDIA QUERIES SMALL*/
 @media screen and (max-width: 600px) {
   .about__me {
-    width: 65%;
+    width: 50%;
     margin: 0 auto 3rem;
   }
   .about__cards {
