--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@
 
   --container-width-lg: 75%;
   --container-width-md: 86%;
-  --container-width-ms: 90%;
+  --container-width-sm: 90%;
 }
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -107,6 +107,9 @@ img {
   width: 100%;
   object-fit: cover;
 }
+#portfolio {
+  height: fit-content;
+}
 
 /* MEDIA QUERIES (MEDIUM DEVICES) */
 @media screen and (max-width: 1024px) {
@@ -116,6 +119,10 @@ img {
   section {
     margin-top: 4rem;
   }
+  #services,
+  #about {
+    height: fit-content;
+  }
 }
 /* MEDIA QUERIES (SMALL DEVICES) */
 @media screen and (max-width: 600px) {
@@ -123,6 +130,10 @@ img {
     width: var(--container-width-sm);
   }
   section {
-    margin-top: 2rem;
+    margin-top: 8rem;
+  }
+  #services,
+  #about {
+    height: fit-content;
   }
 }
