--- a/src/index.css
+++ b/src/index.css
@@ -120,7 +120,9 @@ img {
     margin-top: 4rem;
   }
   #services,
-  #about {
+  #about,
+  #contact,
+  #experience {
     height: fit-content;
   }
 }
@@ -133,7 +135,9 @@ img {
     margin-top: 8rem;
   }
   #services,
-  #about {
+  #about,
+  #contact,
+  #experience {
     height: fit-content;
   }
 }
