--- a/src/components/About/style.css
+++ b/src/components/About/style.css
@@ -3,6 +3,11 @@
   grid-template-columns: 35% 50%;
   gap: 15%;
 }
+.about__content {
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+}
 .about__me {
   width: 90%;
   aspect-ratio: 1/1;
